--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JM__Port</title>
+    <title>Jochelle Mabasa</title>
     <base href="/" />
     <!--<base href="/" />-->
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
